# MarketplaceBookStore

./: .gitignore  pyproject.toml
books/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_author_publisher_remove_book_author_book_authors_and_more.py  0003_book_store.py  0004_alter_book_publisher.py  0005_book_status_alter_deliveryoption_delivery_option.py  0006_alter_book_status.py  0007_alter_book_status.py  0008_alter_book_description.py  0009_alter_book_price.py  0010_alter_book_published_year.py
books/templatetags/: books_tags.py
carts/: admin.py  models.py  utils.py  views.py
carts/migrations/: 0001_initial.py  0002_rename_book_cart_product.py  0003_delete_cartqueryset.py
carts/templatetags/: carts_tags.py
core/: settings.py  urls.py
customer/: models.py  urls.py  views.py
customer/migrations/: 0001_initial.py
fixtures/genre/: genre.json
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
orders/: admin.py  forms.py  models.py  views.py
orders/migrations/: 0001_initial.py  0002_order_delivery_address_order_is_paid_and_more.py  0003_remove_order_total_amount.py  0004_order_total_amount.py
store/: forms.py  models.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py
templates/email_templates/: email_ferification_pending.html  email_verification_pending.html  new_email_sent.html  request_new_email_form.html  success.html  verification_email.html
templates/include/: base.html  (+5 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+24 files in other folders)
